<resources>
    <string name="app_name">Teacher Planner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_student_list">Students</string>
    <string name="title_student_detail">Student Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_note_list">Notes</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="progress">Progress</string>
    <string name="percent">%</string>

    <string name="title_student_details_activity">Student Details</string>
    <string name="title_student_list_activity">Students</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="add_meeting">Add meeting</string>
    <string name="title_activity_iteration_list">IterationListActivity</string>
    <string name="percent_symbol">%</string>
    <string name="deadline">Deadline:</string>

    <string name="open_status">Open</string>
    <string name="inprogress_status">In Progress</string>
    <string name="resolved_status">Resolved</string>
    <string name="closed_status">Closed</string>
    <string name="description">Description</string>
    <string name="info">Info</string>
    <string name="status">Status:</string>
    <string name="features">Features</string>
    <string name="title_activity_feature_list">FeatureListActivity</string>
    <string name="edit_task">edit task</string>
    <string name="view_tasks">view tasks</string>
    <string name="edit_feature">edit feature</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="iterations">Iterations</string>
    <string name="tasks">Tasks</string>
    <string name="iteration_details">Iteration Details</string>
    <string name="remove">remove</string>
    <string name="edit_details">edit details</string>
    <string name="view_features">view features</string>
    <string name="menu_logout">Log out</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="group_hint">Group</string>
    <string name="view_iterations">View iterations</string>
    <string name="view_meetings">View Meetings</string>
    <string name="call_number">Call Number</string>
    <string name="send_email">Send email</string>
    <string name="new_student">New Student</string>
    <string name="enter_feature_description">Enter feature description...</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_meetings_list">MeetingsListActivity</string>
    <string name="title_activity_new_meeting">NewMeetingActivity</string>
    <string name="pick_deadline">Pick Deadline</string>
    <string name="title">Title</string>
    <string name="write_your_iteration_details">Write your iteration details...</string>
    <string name="meetings">Meetings</string>
    <string name="new_meeting">New Meeting</string>
</resources>
