<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="start"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="30dp"
    app:contentPadding="20dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">
        <TextView
            android:id="@+id/iterationTitleTextView"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            tools:text="Iteration Title"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/iterationStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            tools:text="COMPLETED"/>
        <TextView
            android:id="@+id/textDeadlineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iterationTitleTextView"
            android:layout_marginStart="10dp"
            android:text="@string/deadline"/>
        <TextView
            android:id="@+id/iterationDeadlineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textDeadlineTextView"
            android:layout_below="@id/iterationTitleTextView"
            tools:text="10/10/2017"/>
        <TextView
            android:id="@+id/iterationDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDeadlineTextView"
            android:padding="10dp"
            android:textSize="20sp"
            tools:text="Description of the iteration that goes here right on these few lines that i have no inspiration what so ever to write"/>

        <Button
            android:id="@+id/viewFeaturesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iterationDescriptionTextView"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/view_features"/>
        <Button
            android:id="@+id/editIterationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iterationDescriptionTextView"
            android:layout_toEndOf="@+id/viewFeaturesButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorGrey600"
            android:text="@string/edit_details"/>
        <Button
            android:id="@+id/removeIterationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iterationDescriptionTextView"
            android:layout_toEndOf="@+id/editIterationButton"
            android:textColor="@color/colorAccentOrange"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/remove"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>