<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    tools:context="com.example.robertszekely.teacherplanner.activity.IterationDetailsActivity">

    <TextView
        android:id="@+id/iterationDetailsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        tools:text="Kangaroo Valley Safari" />

    <Button
        android:id="@+id/iterationDetailsSeeFeaturesButton"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="See features"/>

    <!--<View style="@style/Divider"-->
        <!--android:layout_marginTop="10dp"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/iterationDetailsDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Description of the iteration here goes the text for describing the iteration that goes here goes the text for decribing the iteration that goes here goes the text for describing the iteration that goes here." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/info"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/iterationDetailsStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="Open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/iterationDetailsDeadlineTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="10-11-2017" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
